# PECOS

./: Cargo.toml  Makefile
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/modules/: element_ops.rs  set_ops.rs
crates/pecos/: Cargo.toml
crates/pecos-cli/: Cargo.toml
crates/pecos-cli/src/: main.rs
crates/pecos-cli/tests/: qir.rs
crates/pecos-core/: Cargo.toml
crates/pecos-core/src/: angle.rs  element.rs  gate.rs  lib.rs  pauli.rs  phase.rs  qubit_id.rs  sets.rs  sign.rs  sims_rngs.rs  stabilizer_code.rs  types.rs
crates/pecos-core/src/angle/: parse.rs
crates/pecos-core/src/pauli/: pauli_bitmap.rs  pauli_sparse.rs  pauli_stabilizer_string.rs  pauli_string.rs
crates/pecos-core/src/phase/: quarter_phase.rs  sign.rs
crates/pecos-core/src/sets/: vec_set.rs
crates/pecos-core/src/sims_rngs/: choices.rs  cyclic_rng.rs  sim_rng.rs
crates/pecos-core/tests/: pauli_op_tests.rs  things_test.rs
crates/pecos-decoders/: Cargo.toml
crates/pecos-decoders/src/: lib.rs
crates/pecos-engines/: Cargo.toml
crates/pecos-engines/src/: channels.rs  engines.rs  errors.rs  gateable_types.rs  lib.rs  noise.rs  qir.rs  types.rs
crates/pecos-engines/src/channels/: shared_memory.rs  stdio.rs
crates/pecos-engines/src/engines/: classical.rs  hybrid.rs  phir.rs  phir_engine.rs  quantum.rs
crates/pecos-engines/src/qir/: bindings.rs  command_queue.rs  compiler.rs  engine.rs  qir_engine.rs
crates/pecos-noise/: Cargo.toml
crates/pecos-noise/src/: depolarizing_noise.rs  lib.rs  noise.rs  noise_model.rs
crates/pecos-python/: Cargo.toml  build.rs
crates/pecos-python/src/: lib.rs  phir_bridge.rs  sparse_stab_bindings.rs  state_vec_bindings.rs  test_phir_bridge.rs
crates/pecos-qec/: Cargo.toml
crates/pecos-qec/src/: decoders.rs
crates/pecos-qec/src/decoders/: mwpm_2d.rs
crates/pecos-qsim/src/: arbitrary_rotation_gateable.rs  clifford_gateable.rs  gens.rs  lib.rs  pauli_prop.rs  prelude.rs  quantum_simulator.rs  sparse_stab.rs  state_vec.rs
crates/pecos-qsim/tests/: helpers.rs  test_state_vec.rs
crates/pecos/src/: prelude.rs
crates/pecos/tests/: wasm_compatibility.rs
examples/phir/: bell.json  qprog.json
examples/python_examples/: logical_steane_code_program.py
examples/qir/: bell.ll  qprog.ll
python/pecos-rslib/: pyproject.toml
python/pecos-rslib/rust/: Cargo.toml
python/pecos-rslib/rust/src/: lib.rs  phir_bridge.rs  sparse_sim.rs  sparse_stab_bindings.rs
python/pecos-rslib/rust/tests/: test_phir_bridge.rs
python/pecos-rslib/src/pecos_rslib/: __init__.py  rssparse_sim.py  rsstate_vec.py
python/pecos-rslib/tests/: test_phir_engine.py
python/pecos/slr/gen_codes/: gen_qir.py  qir_gate_mapping.py
python/quantum-pecos/: pyproject.toml
python/quantum-pecos/src/pecos/: errors.py
python/quantum-pecos/src/pecos/classical_interpreters/: __init__.py
python/quantum-pecos/src/pecos/decoders/mwpm2d/: precomputing.py
python/quantum-pecos/src/pecos/noise_models/: general_noise.py
python/quantum-pecos/src/pecos/qeclib/color488/: abstract_layout.py  color488.py  plot_layout.py
python/quantum-pecos/src/pecos/qeclib/guppy/: func_helpers.py
python/quantum-pecos/src/pecos/qeclib/guppy/steane/: mod.py  std.py  steane.py
python/quantum-pecos/src/pecos/qeclib/lattices/: reglat_4_4_4_4.py
python/quantum-pecos/src/pecos/qeclib/qubit/: qgate_base.py  qubit.py
python/quantum-pecos/src/pecos/qeclib/steane/: steane.py  steane_class.py
python/quantum-pecos/src/pecos/qeclib/steane/decoders/: lookup.py
python/quantum-pecos/src/pecos/qeclib/steane/gates_sq/: face_rots.py  hadamards.py  paulis.py  sqrt_paulis.py
python/quantum-pecos/src/pecos/qeclib/steane/gates_tq/: transversal_tq.py
python/quantum-pecos/src/pecos/qeclib/steane/meas/: destructive_meas.py  measure_x.py  measure_z.py
python/quantum-pecos/src/pecos/qeclib/steane/preps/: encoding_circ.py  pauli_states.py  plus_h_state.py  t_plus_state.py
python/quantum-pecos/src/pecos/qeclib/steane/qec/: qec_3parallel.py
python/quantum-pecos/src/pecos/qeclib/steane/syn_extract/: six_check_nonflagging.py  three_parallel_flagging.py
python/quantum-pecos/src/pecos/qeclib/surface/: __init__.py  enums.py  patch_builders.py  protocols.py  surface.py  surface_patch.py  visualization.py
python/quantum-pecos/src/pecos/qeclib/surface/gate_collections/: surface_bare_syn_gates.py  surface_meas_prep_gates.py  surface_std_gates.py  surface_transversal_gates.py
python/quantum-pecos/src/pecos/qeclib/surface/gate_sets/: surface_bare_syn_gates.py  surface_meas_prep_gates.py  surface_std_gates.py  surface_transversal_gates.py
python/quantum-pecos/src/pecos/qeclib/surface/layouts/: layout_4_4_4_4.py  layout_base.py  rot_square_lattice.py  square_lattice.py
python/quantum-pecos/src/pecos/qeclib/surface/patch_layouts/: layout_4_4_4_4_rotated.py
python/quantum-pecos/src/pecos/qeclib/surface/patches/: base_patch.py  patch_base.py  surface_4444_rot_patch.py  surface_patch.py  surface_patches.py
python/quantum-pecos/src/pecos/qeclib/surface/visualization/: lattice_2d.py  rotated_lattice.py  visualization.py  (+1 more)
python/quantum-pecos/src/pecos/qeclib/vis/: plot_patch.py
python/quantum-pecos/src/pecos/simulators/: __init__.py
python/quantum-pecos/src/pecos/simulators/sparsesim/: cmd_two_qubit.py
python/quantum-pecos/src/pecos/slr/: __init__.py  block.py  codegen.py  misc.py  scratch  typechecking.py  vars.py
python/quantum-pecos/src/pecos/slr/gen_codes/: gen_guppy.py  gen_hugr.py  gen_phir.py  gen_qasm.py
python/tests/pecos/integration/: test_phir_ops.py  test_slr_to_phir.py
python/tests/pecos/integration/guppy/: test_steane.py
python/tests/pecos/integration/state_sim_tests/: test_statevec.py
python/tests/pecos/regression/test_engines/: test_hybrid_engine_old.py
python/tests/pecos/regression/test_qasm/examples/: test_logical_steane_code_program.py
python/tests/pecos/regression/test_qeclib/test_surface/: test_new_surface_patch.py
python/tests/pecos/unit/slr/: test_vars.py
scripts/: run-tests.sh  setup-env.sh
tests/regression/test_qasm/random_cases/: test_slr_phys.py
(+21 files in other folders)
