[workspace]
resolver = "2"
members = [
    "python/pecos-rslib/rust",
    "crates/pecos*",
    "crates/benchmarks",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
readme = "README.md"
authors = [
    "The PECOS Developers",
    "Ciaran Ryan-Anderson<ciaranra@gmail.com>",
]
homepage = "https://pecos.io"
repository = "https://github.com/PECOS-packages/PECOS"
license = "Apache-2.0"
keywords = ["scientific", "quantum", "QEC"]
categories = ["science", "simulation"]

[workspace.dependencies]
pyo3 = "0.23"
rand = "0.8"
rayon = "1"
rand_chacha = "0.3"
rand_xoshiro = "0.6"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
memmap2 = "0.9"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
os_pipe = "1"
lazy_static = "1.5.0"
parking_lot = "0.12.3"
serde_json = "1.0.137"
num-complex = "0.4"
num-traits = "0.2"
regex = "1"

pecos-core = { version = "0.1.1", path = "crates/pecos-core" }
pecos-noise = { version = "0.1.1", path = "crates/pecos-noise" }
pecos-qsim = { version = "0.1.1", path = "crates/pecos-qsim" }
pecos-engines = { version = "0.1.1", path = "crates/pecos-engines" }
pecos-qec = { version = "0.1.1", path = "crates/pecos-qec" }
pecos = { version = "0.1.1", path = "crates/pecos" }
pecos-cli = { version = "0.1.1", path = "crates/pecos-cli" }
pecos-rslib = { version = "0.1.1", path = "python/pecos-rslib/rust"}

[profile.release]
codegen-units = 1
lto = "fat"

[workspace.lints.clippy]
# For more details see: https://doc.rust-lang.org/clippy/lints.html
suspicious = "warn"
complexity = "warn"
perf = "warn"
style = "warn"
pedantic = "warn"
# restriction = "warn"
cargo = "warn"

[workspace.metadata.commands]
test-py = ["./scripts/setup-env.sh", "cargo", "test", "-p", "pecos-python"]
