[package]
name = "benchmarks"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dev-dependencies]
criterion = { workspace = true }
pecos = { workspace = true }

[[bench]]
name = "benchmarks"
harness = false

[lints]
workspace = true
