[package]
name = "pecos-cli"
version.workspace = true
edition.workspace = true
readme.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Provides a CLI for PECOS."


[[bin]]
name = "pecos"
path = "src/main.rs"

[dependencies]
pecos = { workspace = true }
clap = { workspace = true }
log = {  workspace = true }
env_logger = { workspace = true }

[lints]
workspace = true
