[package]
name = "pecos-decoders"
version.workspace = true
edition.workspace = true
readme.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "A collection of decoders and decoder utilies what works with the PECOS ecosystem."

[dependencies]

[lints]
workspace = true
