[package]
name = "pecos-engines"
version.workspace = true
edition.workspace = true
readme.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
rand = "0.8"
rayon = "1"
log = "0.4"
memmap2 = "0.9.5"
uuid = { version = "1.12.1", features = ["v4"] }
serde = { version = "1.0.217", features = ["derive"] }
os_pipe = "1"
lazy_static = "1.5.0"
parking_lot = "0.12.3"
serde_json = "1.0.137"

[lints]
workspace = true
