[package]
name = "pecos-engines"
version.workspace = true
edition.workspace = true
readme.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Provides simulator engines for PECOS simulations."


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rayon = { workspace = true}
log = { workspace = true }
memmap2 = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
os_pipe = { workspace = true }
lazy_static = { workspace = true }
parking_lot = { workspace = true }
serde_json = { workspace = true }

pecos-core = { workspace = true }
pecos-noise = { workspace = true }
pecos-qsim = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
