[package]
name = "pecos-python"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Allows running Rust code in Python."
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = { workspace=true, features = ["extension-module", "auto-initialize"] }
pecos = { workspace = true }
parking_lot = "0.12.3"
once_cell = "1.19.0"
pyo3-build-config = "0.23.4"
serde_json = "1.0.137"

#[dev-dependencies]
#serde_json = "1.0.137"

[build-dependencies]
pyo3-build-config = "0.23"
serde_json = "1"

[lints]
workspace = true
