[package]
name = "pecos"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "A crate for evaluating and exploring quantum error correction."

[dependencies]
pecos-core = { workspace = true }
pecos-noise = { workspace = true }
pecos-qsim = { workspace = true }
pecos-engines = { workspace = true }

[lints]
workspace = true
