# PECOS/python/pecos-rslib/rust/Cargo.toml
[package]
name = "pecos-rslib"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Allows running Rust code in Python."
publish = false

[lib]
name = "pecos_rslib"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { workspace=true, features = ["extension-module", "auto-initialize"] }
pecos = { workspace = true }
parking_lot = "0.12.3"
serde_json = "1.0.137"

[lints]
workspace = true
